# fake-smtp-server

./: .gitignore  Base64.cpp  CMakeLists.txt  EmailAnalyser.cpp  EmailAnalyser.h  README.md  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  any_mail.sh  fake-smtp-server.service  main.cpp  update.sh
scripts/: any_mail.sh
